# FEMU

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  download.sh  femu-batch.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
database/: schema
old_scripts/: check_emulation.sh  mountPartition.cpp  umountImg.cpp
old_scripts/partitionHandler/: add.hpp  remove.cpp  util.cpp  util.hpp
scripts/: Makefile  addPartition.cpp  mountImg.cpp
scripts/firmadyne/: debug.sh  network.sh  preInit.sh
scripts/partitionHandler/: add.cpp  partitionHandler.cpp  remove.hpp
src/: common.py  dbInterface.py  emulationVerifier.py  emulator.py  emulatorConfig.py  guestUtils.py  kernelLogUtils.py  main.py  preEmulator.py  prepareImage.py  qemuInterface.py  util.py
src/femu/: __init__.py  __main__.py  common.py  db.py  dbInterface.py  emulationVerifier.py  emulator.py  emulatorConfig.py  findings.py  freezeDiagnostics.py  guestUtils.py  kernelLogUtils.py  main.py  nvramInfer.py  preEmulator.py  prepareImage.py  qemuInterface.py  util.py
src/femu/scripts/firmadyne/: preInit.sh  run_service.sh
tools/: femu-batch.py  femu-web.py
