[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femu"
version = "0.1.0"
description = "Firmware Emulation Framework"
requires-python = ">=3.10"

dependencies = [
    "femu-extractor @ git+https://github.com/RePort-FEMU/extractor@master",
    "psycopg2-binary>=2.9",
]

[project.urls]
Repository = "https://github.com/RePort-FEMU/FEMU"

[project.scripts]
femu = "femu.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
femu = ["binaries/*", "scripts/firmadyne/*", "scripts/firmadyne/**/*"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
